influxdb3/tests/server/snapshots/lib__server__query__api_v1_query_api_show_databases.snap
---
source: influxdb3/tests/server/query.rs
description: SHOW DATABASES
expression: response
---
{"results":[{"statement_id":0,"series":[{"name":"databases","columns":["name"],"values":[["_internal"],["foo"],["bar"]]}]}]}
