influxdb3/tests/server/snapshots/lib__server__query__api_v1_query_api_show_databases_and_retention_policies-2.snap
---
source: influxdb3/tests/server/query.rs
description: SHOW RETENTION POLICIES on foo db
expression: response
---
{"results":[{"statement_id":0,"series":[{"name":"retention_policies","columns":["name","duration","default"],"values":[["foo","0s",true]]}]}]}
