influxdb3/tests/server/snapshots/lib__server__query__api_v1_query_api_show_databases_and_retention_policies-4.snap
---
source: influxdb3/tests/server/query.rs
description: SHOW RETENTION POLICIES on non-existent db
expression: response
---
{"results":[{"statement_id":0,"error":"datafusion error: Error during planning: database not found: frodo"}]}
