influxdb3/tests/server/snapshots/lib__server__query__api_v1_query_group_by-11.snap
---
source: influxdb3/tests/server/query.rs
description: "query: select * from bar group by t1, t2, t3, chunked: false"
expression: values
---
[
  {
    "results": [
      {
        "series": [
          {
            "columns": [
              "time",
              "val"
            ],
            "name": "bar",
            "tags": {
              "t1": "a",
              "t2": "aa",
              "t3": ""
            },
            "values": [
              [
                "2065-01-07T17:28:51Z",
                1
              ]
            ]
          },
          {
            "columns": [
              "time",
              "val"
            ],
            "name": "bar",
            "tags": {
              "t1": "a",
              "t2": "bb",
              "t3": ""
            },
            "values": [
              [
                "2065-01-07T17:28:53Z",
                3
              ]
            ]
          },
          {
            "columns": [
              "time",
              "val"
            ],
            "name": "bar",
            "tags": {
              "t1": "b",
              "t2": "aa",
              "t3": ""
            },
            "values": [
              [
                "2065-01-07T17:28:52Z",
                2
              ]
            ]
          },
          {
            "columns": [
              "time",
              "val"
            ],
            "name": "bar",
            "tags": {
              "t1": "b",
              "t2": "bb",
              "t3": ""
            },
            "values": [
              [
                "2065-01-07T17:28:54Z",
                4
              ]
            ]
          }
        ],
        "statement_id": 0
      }
    ]
  }
]
