influxdb3/tests/server/snapshots/lib__server__query__api_v1_query_group_by-16.snap
---
source: influxdb3/tests/server/query.rs
description: "query: select * from bar group by /not_a_match/, chunked: true"
expression: values
---
[
  {
    "results": [
      {
        "series": [
          {
            "columns": [
              "time",
              "val"
            ],
            "name": "bar",
            "values": [
              [
                "2065-01-07T17:28:51Z",
                1
              ],
              [
                "2065-01-07T17:28:52Z",
                2
              ],
              [
                "2065-01-07T17:28:53Z",
                3
              ],
              [
                "2065-01-07T17:28:54Z",
                4
              ]
            ]
          }
        ],
        "statement_id": 0
      }
    ]
  }
]
